[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Styles/Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão3.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão2.png" type="Texture" id=3]
[ext_resource path="res://assets/Images/Composition/Menu/Padrão1.png" type="Texture" id=4]
[ext_resource path="res://assets/Dummy/Jornal-do-Brasil.jpg" type="Texture" id=5]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/previous.png" type="Texture" id=7]
[ext_resource path="res://scenes/observation/PhotoAnalyze.gd" type="Script" id=8]
[ext_resource path="res://assets/Dummy/Jornal.jpg" type="Texture" id=9]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.otf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.972549, 0.882353, 0.435294, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.4, 0.631373, 0.862745, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.972549, 0.882353, 0.435294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.45098, 0.533333, 0.556863, 0 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 5.0
expand_margin_right = 3.0
shadow_color = Color( 0.0941176, 0.0627451, 0.0627451, 0.0784314 )
shadow_size = 1
shadow_offset = Vector2( 1, 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.972549, 0.882353, 0.435294, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.631373, 0.862745, 0.521569 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PhotoAnalyze" type="CanvasLayer"]
script = ExtResource( 8 )
img = [ ExtResource( 5 ), ExtResource( 9 ) ]

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.945098, 0.933333, 0.905882, 1 )

[node name="Subackground01" type="Sprite" parent="BackGround"]
position = Vector2( 200, 478.65 )
scale = Vector2( 0.308902, 0.288057 )
texture = ExtResource( 2 )

[node name="Subackground02" type="Sprite" parent="BackGround"]
position = Vector2( 880, 354.7 )
scale = Vector2( 0.302746, 0.305539 )
texture = ExtResource( 4 )

[node name="Subackground03" type="Sprite" parent="BackGround"]
position = Vector2( 704, 122.7 )
scale = Vector2( 0.33033, 0.273509 )
texture = ExtResource( 3 )

[node name="PhotoPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -224.0
margin_right = 341.0
margin_bottom = 241.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": "
"
}

[node name="image" type="Sprite" parent="PhotoPanel"]
position = Vector2( 339, 232 )
scale = Vector2( 0.562933, 0.802551 )
texture = ExtResource( 5 )

[node name="Next" type="Button" parent="."]
margin_left = 912.0
margin_top = 240.0
margin_right = 944.0
margin_bottom = 316.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 6 )
expand_icon = true

[node name="Prev" type="Button" parent="."]
margin_left = 80.0
margin_top = 240.0
margin_right = 116.0
margin_bottom = 316.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 7 )

[node name="Title" type="Label" parent="."]
margin_left = 416.0
margin_top = 16.0
margin_right = 510.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.0235294, 0.0313726, 0.109804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Análise as Images
"

[node name="Button" type="Button" parent="."]
margin_left = 880.0
margin_top = 528.0
margin_right = 992.0
margin_bottom = 564.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Proximo"

[connection signal="pressed" from="Next" to="." method="next_image"]
[connection signal="pressed" from="Prev" to="." method="previous_image"]
[connection signal="pressed" from="Button" to="." method="exit"]
